--- a/styles/general.css
+++ b/styles/general.css
@@ -498,4 +498,14 @@ footer {
     bottom: 10px;
     left: 20px;
   }
+}
+.attribution {
+  font-size: 11px;
+  text-align: center;
+  background: var(--black);
+  color: var(--white);
+}
+
+.attribution a {
+  color: hsl(228deg, 45%, 44%);
 }/*# sourceMappingURL=general.css.map */
